--- a/fisu-app/Base.lproj/Main.storyboard
+++ b/fisu-app/Base.lproj/Main.storyboard
@@ -18,8 +18,27 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="calendar146.png" translatesAutoresizingMaskIntoConstraints="NO" id="8zm-pL-EFA">
+                                <rect key="frame" x="368" y="54" width="54" height="54"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="54" id="FY4-GB-bbD"/>
+                                    <constraint firstAttribute="width" constant="54" id="Sxf-43-XV8"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="54" id="hTR-uZ-T1i"/>
+                                    <constraint firstAttribute="height" constant="54" id="v48-vN-IQl"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Events" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jHb-Z1-ifh">
+                                <rect key="frame" x="20" y="49" width="560" height="63"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="560" id="1Y3-q9-0x8"/>
+                                    <constraint firstAttribute="height" constant="63" id="RWu-Eg-1KF"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="AppleSDGothicNeo-Regular" family="Apple SD Gothic Neo" pointSize="40"/>
+                                <color key="textColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lD1-gC-jlU">
-                                <rect key="frame" x="34" y="28" width="29" height="29"/>
+                                <rect key="frame" x="20" y="20" width="29" height="29"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="29" id="3Lf-s5-31J"/>
                                     <constraint firstAttribute="height" constant="29" id="CbE-8y-jkf"/>
@@ -31,35 +50,17 @@
                                     <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
                             </button>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="calendar146.png" translatesAutoresizingMaskIntoConstraints="NO" id="8zm-pL-EFA">
-                                <rect key="frame" x="162" y="80" width="54" height="54"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="54" id="FY4-GB-bbD"/>
-                                    <constraint firstAttribute="width" constant="54" id="Sxf-43-XV8"/>
-                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="54" id="hTR-uZ-T1i"/>
-                                    <constraint firstAttribute="height" constant="54" id="v48-vN-IQl"/>
-                                </constraints>
-                            </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Events" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jHb-Z1-ifh">
-                                <rect key="frame" x="210" y="80" width="153" height="63"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="153" id="7j9-oo-obH"/>
-                                    <constraint firstAttribute="height" constant="63" id="krA-Tp-d1o"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" name="AppleSDGothicNeo-Regular" family="Apple SD Gothic Neo" pointSize="40"/>
-                                <color key="textColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="jHb-Z1-ifh" firstAttribute="top" secondItem="8zm-pL-EFA" secondAttribute="top" id="9e4-xt-4Xj"/>
-                            <constraint firstItem="8zm-pL-EFA" firstAttribute="top" secondItem="Mcq-mr-j4o" secondAttribute="bottom" constant="60" id="CQ3-Os-PWD"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="8zm-pL-EFA" secondAttribute="trailing" constant="364" id="D3P-a7-zq7"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="8zm-pL-EFA" secondAttribute="trailing" constant="364" id="mP5-jN-92e"/>
-                            <constraint firstItem="lD1-gC-jlU" firstAttribute="centerX" secondItem="zOE-AW-gPU" secondAttribute="centerX" constant="-251.5" id="uc2-20-ybk"/>
-                            <constraint firstItem="jHb-Z1-ifh" firstAttribute="centerX" secondItem="lD1-gC-jlU" secondAttribute="centerX" constant="238" id="wB5-er-Dyl"/>
-                            <constraint firstItem="lD1-gC-jlU" firstAttribute="top" secondItem="Mcq-mr-j4o" secondAttribute="bottom" constant="8" id="zR2-f8-vSV"/>
+                            <constraint firstItem="jHb-Z1-ifh" firstAttribute="centerX" secondItem="zOE-AW-gPU" secondAttribute="centerX" id="0iw-2E-tBy"/>
+                            <constraint firstItem="lD1-gC-jlU" firstAttribute="leading" secondItem="zOE-AW-gPU" secondAttribute="leadingMargin" id="6Nb-ht-ve1"/>
+                            <constraint firstItem="lD1-gC-jlU" firstAttribute="centerX" secondItem="zOE-AW-gPU" secondAttribute="centerX" constant="-265.5" id="Asn-to-WSz"/>
+                            <constraint firstItem="lD1-gC-jlU" firstAttribute="top" secondItem="Mcq-mr-j4o" secondAttribute="bottom" id="Eow-gI-com"/>
+                            <constraint firstItem="lD1-gC-jlU" firstAttribute="leading" secondItem="zOE-AW-gPU" secondAttribute="leadingMargin" id="Uvg-to-73A"/>
+                            <constraint firstItem="8zm-pL-EFA" firstAttribute="centerX" secondItem="zOE-AW-gPU" secondAttribute="centerX" constant="95" id="l7v-2S-W19"/>
+                            <constraint firstItem="8zm-pL-EFA" firstAttribute="top" secondItem="Mcq-mr-j4o" secondAttribute="bottom" constant="34" id="sPt-mu-rPd"/>
+                            <constraint firstItem="jHb-Z1-ifh" firstAttribute="top" secondItem="Mcq-mr-j4o" secondAttribute="bottom" constant="29" id="xWB-h3-9kB"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -243,7 +244,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZvV-ck-WoB">
-                                <rect key="frame" x="20" y="20" width="29" height="29"/>
+                                <rect key="frame" x="20" y="28" width="29" height="29"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="29" id="3JU-Lp-kZd"/>
                                     <constraint firstAttribute="width" constant="29" id="HPe-70-9JL"/>
@@ -255,38 +256,41 @@
                                     <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Restaurants" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5ts-U4-pU8">
-                                <rect key="frame" x="208" y="33" width="184" height="43"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cutlery23.png" translatesAutoresizingMaskIntoConstraints="NO" id="xau-cl-BEq">
+                                <rect key="frame" x="389" y="39" width="51" height="75"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="184" id="BXu-9D-9ha"/>
-                                    <constraint firstAttribute="height" constant="43" id="SPG-rU-so6"/>
+                                    <constraint firstAttribute="width" constant="51" id="P9g-h1-qvb"/>
+                                    <constraint firstAttribute="height" constant="75" id="wAY-lq-VaQ"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Restaurants" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5ts-U4-pU8">
+                                <rect key="frame" x="20" y="47" width="560" height="60"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="560" id="BXu-9D-9ha"/>
+                                    <constraint firstAttribute="height" constant="60" id="SPG-rU-so6"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="AppleSDGothicNeo-Regular" family="Apple SD Gothic Neo" pointSize="35"/>
                                 <color key="textColor" red="0.11764705882352941" green="0.50196078431372548" blue="0.94117647058823528" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cutlery23.png" translatesAutoresizingMaskIntoConstraints="NO" id="xau-cl-BEq">
-                                <rect key="frame" x="151" y="28" width="49" height="48"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="49" id="2pU-gO-LJ6"/>
-                                    <constraint firstAttribute="height" constant="48" id="Aua-xc-g9h"/>
-                                </constraints>
-                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="5ts-U4-pU8" firstAttribute="leading" secondItem="xau-cl-BEq" secondAttribute="trailing" constant="8" id="2jq-nF-5FG"/>
-                            <constraint firstItem="xau-cl-BEq" firstAttribute="leading" secondItem="ZvV-ck-WoB" secondAttribute="trailing" constant="102" id="9ia-cP-NUr"/>
-                            <constraint firstItem="5ts-U4-pU8" firstAttribute="top" secondItem="RKF-uT-SvN" secondAttribute="bottom" constant="13" id="XHB-Xj-7hy"/>
+                            <constraint firstItem="xau-cl-BEq" firstAttribute="centerX" secondItem="vhb-t9-kHc" secondAttribute="centerX" constant="114.5" id="1FC-o6-kyn"/>
+                            <constraint firstItem="ZvV-ck-WoB" firstAttribute="centerX" secondItem="vhb-t9-kHc" secondAttribute="centerX" constant="-265.5" id="4e0-tL-aua"/>
+                            <constraint firstItem="xau-cl-BEq" firstAttribute="centerY" secondItem="vhb-t9-kHc" secondAttribute="centerY" constant="-223.5" id="CuJ-0Q-hdB"/>
+                            <constraint firstItem="ZvV-ck-WoB" firstAttribute="leading" secondItem="vhb-t9-kHc" secondAttribute="leadingMargin" id="GgN-LO-Msf"/>
+                            <constraint firstItem="xau-cl-BEq" firstAttribute="top" secondItem="RKF-uT-SvN" secondAttribute="bottom" constant="19" id="NEI-jZ-pSN"/>
+                            <constraint firstItem="5ts-U4-pU8" firstAttribute="top" secondItem="RKF-uT-SvN" secondAttribute="bottom" constant="27" id="XHB-Xj-7hy"/>
                             <constraint firstItem="5ts-U4-pU8" firstAttribute="centerX" secondItem="vhb-t9-kHc" secondAttribute="centerX" id="lSK-YK-2uR"/>
-                            <constraint firstItem="ZvV-ck-WoB" firstAttribute="top" secondItem="RKF-uT-SvN" secondAttribute="bottom" id="sUZ-FK-uax"/>
-                            <constraint firstItem="xau-cl-BEq" firstAttribute="top" secondItem="RKF-uT-SvN" secondAttribute="bottom" constant="8" id="v1l-jm-RHJ"/>
+                            <constraint firstItem="5ts-U4-pU8" firstAttribute="centerY" secondItem="vhb-t9-kHc" secondAttribute="centerY" constant="-223" id="usm-2Q-RqO"/>
+                            <constraint firstItem="ZvV-ck-WoB" firstAttribute="top" secondItem="RKF-uT-SvN" secondAttribute="bottom" constant="8" id="zdj-Mx-ZK1"/>
                         </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nT7-xJ-rcj" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="118" y="1085"/>
+            <point key="canvasLocation" x="118" y="1082"/>
         </scene>
     </scenes>
     <resources>
