--- a/fisu-app/Base.lproj/Main.storyboard
+++ b/fisu-app/Base.lproj/Main.storyboard
@@ -19,30 +19,14 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="calendar146.png" translatesAutoresizingMaskIntoConstraints="NO" id="8zm-pL-EFA">
-                                <rect key="frame" x="368" y="54" width="54" height="54"/>
+                                <rect key="frame" x="371" y="46" width="54" height="54"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="54" id="FY4-GB-bbD"/>
-                                    <constraint firstAttribute="width" constant="54" id="Sxf-43-XV8"/>
-                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="54" id="hTR-uZ-T1i"/>
-                                    <constraint firstAttribute="height" constant="54" id="v48-vN-IQl"/>
+                                    <constraint firstAttribute="height" constant="54" id="26o-FP-vci"/>
+                                    <constraint firstAttribute="width" constant="54" id="L9V-vp-mAc"/>
                                 </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Events" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jHb-Z1-ifh">
-                                <rect key="frame" x="20" y="49" width="560" height="63"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="560" id="1Y3-q9-0x8"/>
-                                    <constraint firstAttribute="height" constant="63" id="RWu-Eg-1KF"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" name="AppleSDGothicNeo-Regular" family="Apple SD Gothic Neo" pointSize="40"/>
-                                <color key="textColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lD1-gC-jlU">
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lD1-gC-jlU">
                                 <rect key="frame" x="20" y="20" width="29" height="29"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="29" id="3Lf-s5-31J"/>
-                                    <constraint firstAttribute="height" constant="29" id="CbE-8y-jkf"/>
-                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                 <inset key="contentEdgeInsets" minX="1" minY="1" maxX="1" maxY="1"/>
                                 <size key="titleShadowOffset" width="2.2250738585072014e-308" height="0.0"/>
@@ -50,17 +34,22 @@
                                     <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Events" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jHb-Z1-ifh">
+                                <rect key="frame" x="236" y="49" width="129" height="48"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="129" id="IZr-2W-K54"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="AppleSDGothicNeo-Regular" family="Apple SD Gothic Neo" pointSize="40"/>
+                                <color key="textColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="jHb-Z1-ifh" firstAttribute="centerX" secondItem="zOE-AW-gPU" secondAttribute="centerX" id="0iw-2E-tBy"/>
-                            <constraint firstItem="lD1-gC-jlU" firstAttribute="leading" secondItem="zOE-AW-gPU" secondAttribute="leadingMargin" id="6Nb-ht-ve1"/>
-                            <constraint firstItem="lD1-gC-jlU" firstAttribute="centerX" secondItem="zOE-AW-gPU" secondAttribute="centerX" constant="-265.5" id="Asn-to-WSz"/>
-                            <constraint firstItem="lD1-gC-jlU" firstAttribute="top" secondItem="Mcq-mr-j4o" secondAttribute="bottom" id="Eow-gI-com"/>
-                            <constraint firstItem="lD1-gC-jlU" firstAttribute="leading" secondItem="zOE-AW-gPU" secondAttribute="leadingMargin" id="Uvg-to-73A"/>
-                            <constraint firstItem="8zm-pL-EFA" firstAttribute="centerX" secondItem="zOE-AW-gPU" secondAttribute="centerX" constant="95" id="l7v-2S-W19"/>
-                            <constraint firstItem="8zm-pL-EFA" firstAttribute="top" secondItem="Mcq-mr-j4o" secondAttribute="bottom" constant="34" id="sPt-mu-rPd"/>
-                            <constraint firstItem="jHb-Z1-ifh" firstAttribute="top" secondItem="Mcq-mr-j4o" secondAttribute="bottom" constant="29" id="xWB-h3-9kB"/>
+                            <constraint firstItem="8zm-pL-EFA" firstAttribute="leading" secondItem="jHb-Z1-ifh" secondAttribute="trailing" constant="6" id="FAm-Vq-WXt"/>
+                            <constraint firstItem="8zm-pL-EFA" firstAttribute="centerY" secondItem="jHb-Z1-ifh" secondAttribute="centerY" id="KCR-mC-X3x"/>
+                            <constraint firstItem="jHb-Z1-ifh" firstAttribute="centerX" secondItem="zOE-AW-gPU" secondAttribute="centerX" id="jQB-pH-jdg"/>
+                            <constraint firstItem="jHb-Z1-ifh" firstAttribute="top" secondItem="Mcq-mr-j4o" secondAttribute="bottom" constant="29" id="rtX-yh-YRl"/>
                         </constraints>
                     </view>
                 </viewController>
