--- a/fisu-app/Base.lproj/Main.storyboard
+++ b/fisu-app/Base.lproj/Main.storyboard
@@ -18,13 +18,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="calendar" translatesAutoresizingMaskIntoConstraints="NO" id="8zm-pL-EFA">
-                                <rect key="frame" x="371" y="46" width="54" height="54"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="54" id="26o-FP-vci"/>
-                                    <constraint firstAttribute="width" constant="54" id="L9V-vp-mAc"/>
-                                </constraints>
-                            </imageView>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lD1-gC-jlU">
                                 <rect key="frame" x="20" y="20" width="29" height="29"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
@@ -43,10 +36,17 @@
                                 <color key="textColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="calendar" translatesAutoresizingMaskIntoConstraints="NO" id="8zm-pL-EFA">
+                                <rect key="frame" x="373" y="46" width="54" height="54"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" relation="lessThanOrEqual" constant="54" id="26o-FP-vci"/>
+                                    <constraint firstAttribute="width" relation="lessThanOrEqual" constant="54" id="L9V-vp-mAc"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="8zm-pL-EFA" firstAttribute="leading" secondItem="jHb-Z1-ifh" secondAttribute="trailing" constant="6" id="FAm-Vq-WXt"/>
+                            <constraint firstItem="8zm-pL-EFA" firstAttribute="leading" secondItem="jHb-Z1-ifh" secondAttribute="trailing" constant="8" id="FAm-Vq-WXt"/>
                             <constraint firstItem="8zm-pL-EFA" firstAttribute="centerY" secondItem="jHb-Z1-ifh" secondAttribute="centerY" id="KCR-mC-X3x"/>
                             <constraint firstItem="jHb-Z1-ifh" firstAttribute="centerX" secondItem="zOE-AW-gPU" secondAttribute="centerX" id="jQB-pH-jdg"/>
                             <constraint firstItem="jHb-Z1-ifh" firstAttribute="top" secondItem="Mcq-mr-j4o" secondAttribute="bottom" constant="29" id="rtX-yh-YRl"/>
@@ -245,32 +245,29 @@
                                     <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
                             </button>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cutlery" translatesAutoresizingMaskIntoConstraints="NO" id="xau-cl-BEq">
-                                <rect key="frame" x="389" y="39" width="51" height="75"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="51" id="P9g-h1-qvb"/>
-                                    <constraint firstAttribute="height" constant="75" id="wAY-lq-VaQ"/>
-                                </constraints>
-                            </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Restaurants" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5ts-U4-pU8">
-                                <rect key="frame" x="20" y="47" width="560" height="60"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="560" id="BXu-9D-9ha"/>
-                                    <constraint firstAttribute="height" constant="60" id="SPG-rU-so6"/>
-                                </constraints>
+                                <rect key="frame" x="213" y="56" width="174" height="43"/>
                                 <fontDescription key="fontDescription" name="AppleSDGothicNeo-Regular" family="Apple SD Gothic Neo" pointSize="35"/>
                                 <color key="textColor" red="0.11764705882352941" green="0.50196078431372548" blue="0.94117647058823528" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cutlery" translatesAutoresizingMaskIntoConstraints="NO" id="xau-cl-BEq">
+                                <rect key="frame" x="389" y="45" width="51" height="66"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="lessThanOrEqual" constant="51" id="P9g-h1-qvb"/>
+                                    <constraint firstAttribute="height" relation="lessThanOrEqual" constant="75" id="wAY-lq-VaQ"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="xau-cl-BEq" firstAttribute="centerX" secondItem="vhb-t9-kHc" secondAttribute="centerX" constant="114.5" id="1FC-o6-kyn"/>
                             <constraint firstItem="ZvV-ck-WoB" firstAttribute="centerX" secondItem="vhb-t9-kHc" secondAttribute="centerX" constant="-265.5" id="4e0-tL-aua"/>
-                            <constraint firstItem="xau-cl-BEq" firstAttribute="centerY" secondItem="vhb-t9-kHc" secondAttribute="centerY" constant="-223.5" id="CuJ-0Q-hdB"/>
+                            <constraint firstItem="xau-cl-BEq" firstAttribute="centerY" secondItem="vhb-t9-kHc" secondAttribute="centerY" constant="-222" id="CuJ-0Q-hdB"/>
                             <constraint firstItem="ZvV-ck-WoB" firstAttribute="leading" secondItem="vhb-t9-kHc" secondAttribute="leadingMargin" id="GgN-LO-Msf"/>
-                            <constraint firstItem="xau-cl-BEq" firstAttribute="top" secondItem="RKF-uT-SvN" secondAttribute="bottom" constant="19" id="NEI-jZ-pSN"/>
-                            <constraint firstItem="5ts-U4-pU8" firstAttribute="top" secondItem="RKF-uT-SvN" secondAttribute="bottom" constant="27" id="XHB-Xj-7hy"/>
+                            <constraint firstItem="xau-cl-BEq" firstAttribute="top" secondItem="RKF-uT-SvN" secondAttribute="bottom" constant="25" id="NEI-jZ-pSN"/>
+                            <constraint firstItem="ZvV-ck-WoB" firstAttribute="top" secondItem="RKF-uT-SvN" secondAttribute="bottom" constant="8" id="QXX-jV-MED"/>
+                            <constraint firstItem="ZvV-ck-WoB" firstAttribute="leading" secondItem="vhb-t9-kHc" secondAttribute="leadingMargin" id="g1g-AS-l1G"/>
                             <constraint firstItem="5ts-U4-pU8" firstAttribute="centerX" secondItem="vhb-t9-kHc" secondAttribute="centerX" id="lSK-YK-2uR"/>
                             <constraint firstItem="5ts-U4-pU8" firstAttribute="centerY" secondItem="vhb-t9-kHc" secondAttribute="centerY" constant="-223" id="usm-2Q-RqO"/>
                             <constraint firstItem="ZvV-ck-WoB" firstAttribute="top" secondItem="RKF-uT-SvN" secondAttribute="bottom" constant="8" id="zdj-Mx-ZK1"/>
